2006-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-dav.el (url-dav-file-attributes): Simplify.

	* url-http.el (url-http-head-file-attributes): Add device "info".

2006-09-18  Michael Olson  <mwolson@gnu.org>

	* url-methods.el (url-scheme-register-proxy): Handle case where
	getenv returns an empty string for http_proxy.  This prevents an
	error when calling `format' later on.

2006-08-31  Diane Murray  <disumu@x3y2z1.net>

	* url-parse.el (url-recreate-url-attributes): New function, code
	simply moved from `url-recreate-url'.
	(url-recreate-url): Use it.
	Put the `url-target' at the end of the URL after the attributes.

	* url-http.el (url-http-create-request):
	Use `url-recreate-url-attributes' when setting real-fname.

2006-08-29  Diane Murray  <disumu@x3y2z1.net>

	* url-cookie.el (url-cookie-write-file): Really don't use versioned
	backups.

2006-08-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-handlers.el (url-file-local-copy): Tell url-copy-file that the
	dest file will already exist.

2006-07-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-util.el (url-hexify-string): Only utf-8 encode if it's
	a multibyte string.
	(url-normalize-url): Remove unused var `grok'.
	(url-truncate-url-for-viewing): Remove unused var `tail'.

2006-07-30  Thien-Thi Nguyen  <ttn@gnu.org>

	* url-util.el (url-hexify-string): Rewrite.
	Suggested by David Smith <davidsmith@acm.org>.

2006-07-12  Michael Olson  <mwolson@gnu.org>

	* url-irc.el (url-irc-erc): Call erc-handle-irc-url.

2006-07-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-cookie.el: Remove spurious * in docstrings.
	(url-cookie-write-file): Don't use versioned backups.
	(url-cookie-host-can-set-p): Remove unused var `tmp'.

2006-07-04  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* url-cookie.el (url-cookie-save-interval): Move to url-cookie group.
	(url-cookie-write-file): Reset url-cookies-changed-since-last-save.

2006-05-12  Reiner Steib  <Reiner.Steib@gmx.de>
