@@ -1,3 +1,12 @@
+2006-10-09  Magnus Henoch  <mange@freemail.hu>
+
+	* url-parse.el (url-generic-parse-url): Handle URLs with empty
+	path component and non-empty query component.  Untangle path,
+	query and fragment parsing code.  Add references to RFC 3986 in
+	comments.
+	(url-recreate-url-attributes): Start query string with "?", not
+	";".
+
 2006-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* url-dav.el (url-dav-file-attributes): Simplify.
